# robotstxt

./: .gitignore  BENCHMARK_RESULTS  BUILD  CMakeLists.txt  CMakeLists.txt.in  COMPARISON.md  CONTRIBUTING.md  MODULE.bazel  README.md  reporting_robots.cc  reporting_robots.h  reporting_robots_test.cc  robots.cc  robots.h  robots_benchmark.cc  robots_c.cc  robots_c_demo.c  robots_main.cc  robots_test.cc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-python.yml  windows.yml
benchmark-utils/: README.md  download-data.sh
benchmark-utils/go/: go.mod  main.go
benchmark-utils/python/: bench.py  requirements.txt
benchmark-utils/rust/: Cargo.toml
benchmark-utils/rust/src/: main.rs
bindings/c/: README.md  robots_c.cc  robots_c.h
bindings/go/: README.md  go.mod  robots_impl.cpp  robotstxt.go  robotstxt_test.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/com/google/robotstxt/: ContentSignal.java  RequestRate.java  RobotsMatcher.java
bindings/java/src/main/native/: robots_jni.cc
bindings/java/src/test/java/com/google/robotstxt/: RobotsMatcherTest.java
bindings/python/: README.md  pyproject.toml  setup.py  test_robots.py
bindings/python/robotstxt/: __init__.py  robots.py
bindings/ruby/: README.md  robotstxt.gemspec
bindings/ruby/lib/: robotstxt.rb
bindings/ruby/test/: test_robotstxt.rb
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: lib.rs
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/CRobots/: module.modulemap  shim.h
bindings/swift/Sources/RobotsTxt/: RobotsTxt.swift
bindings/swift/Tests/RobotsTxtTests/: RobotsTxtTests.swift
singleheader/: CMakeLists.txt  README.md  amalgamate.py  demo.cpp  demo_c  demo_c.cpp  demo_reporting.cpp  reporting_robots.h  robots.h  robots_c.h
tests/: reporting_robots_test.cc  robots_benchmark.cc
