[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotstxt"
version = "1.0.0"
description = "Python bindings for Google's robots.txt parser library"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
keywords = ["robots.txt", "robots", "crawler", "parser", "web"]

[project.urls]
Homepage = "https://github.com/google/robotstxt"
Repository = "https://github.com/google/robotstxt"
