[build-system]
requires = ["scikit-build-core>=0.8", "cmake>=3.15", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "fast-robotstxt"
version = "1.0.0"
description = "Python bindings for Google's robots.txt parser library"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Google LLC"},
    {name = "Alexey Nazarov", email = "nz@nzrsky.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
keywords = ["robots.txt", "robots", "crawler", "parser", "web", "seo", "googlebot"]

[project.urls]
Homepage = "https://github.com/nzrsky/robotstxt"
Repository = "https://github.com/nzrsky/robotstxt"
Documentation = "https://github.com/nzrsky/robotstxt#readme"
Issues = "https://github.com/nzrsky/robotstxt/issues"

[tool.scikit-build]
cmake.source-dir = "../.."
cmake.build-type = "Release"
wheel.packages = ["robotstxt"]
wheel.install-dir = "robotstxt"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
ROBOTS_BUILD_TESTS = "OFF"
ROBOTS_BUILD_MAIN = "OFF"
ROBOTS_PYTHON_BINDINGS = "ON"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* pp*"
test-requires = "pytest"
test-command = "pytest {project}/test_robots.py -v"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = "yum install -y cmake3 || apt-get update && apt-get install -y cmake"
environment = { CMAKE_BUILD_PARALLEL_LEVEL = "4" }

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { CMAKE_BUILD_PARALLEL_LEVEL = "4", MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
environment = { CMAKE_BUILD_PARALLEL_LEVEL = "4" }
