[package]
name = "robotstxt"
version = "1.0.0"
edition = "2021"
authors = ["Google LLC"]
description = "Rust bindings for Google's robots.txt parser library"
license = "Apache-2.0"
repository = "https://github.com/google/robotstxt"
keywords = ["robots", "robots-txt", "crawler", "parser", "web"]
categories = ["web-programming", "parser-implementations"]

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
